{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 245,
  "lineage": "3472ca10-8c54-f0c9-a270-fe020dd12ade",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007a7a07631525bd1",
            "domain": "vpc",
            "id": "eipalloc-007a7a07631525bd1",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-186-131.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.186.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "privm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024c319d5d14b463e",
            "arn": "arn:aws:ec2:ap-south-1:248217947790:instance/i-072c708a096df8dd9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072c708a096df8dd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lalit_vm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06d4ba2546ad15dcd",
            "private_dns": "ip-10-0-2-45.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ab7b54ba45ab903",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0485e54228d556156"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5ed7d548a119762",
            "tags": {
              "Name": "privm"
            },
            "tags_all": {
              "Name": "privm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0485e54228d556156"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pubvm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024c319d5d14b463e",
            "arn": "arn:aws:ec2:ap-south-1:248217947790:instance/i-0c4df1c6eb90029eb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4df1c6eb90029eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "lalit_vm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a27d4b5e057775f0",
            "private_dns": "ip-10-0-1-229.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.229",
            "public_ip": "43.205.243.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3903565cd417b20",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0485e54228d556156"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f46cb4a701c3a33b",
            "tags": {
              "Name": "pubvm"
            },
            "tags_all": {
              "Name": "pubvm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0485e54228d556156"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.subnet1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:248217947790:internet-gateway/igw-0ac68caf64e8453b3",
            "id": "igw-0ac68caf64e8453b3",
            "owner_id": "248217947790",
            "tags": {
              "Name": "Internet_Gateway"
            },
            "tags_all": {
              "Name": "Internet_Gateway"
            },
            "vpc_id": "vpc-030743534b07df2e7"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007a7a07631525bd1",
            "connectivity_type": "public",
            "id": "nat-0916acbd56102e010",
            "network_interface_id": "eni-0b430b35c4da71a41",
            "private_ip": "10.0.1.21",
            "public_ip": "13.127.186.131",
            "subnet_id": "subnet-0f46cb4a701c3a33b",
            "tags": {
              "Name": "natgateway"
            },
            "tags_all": {
              "Name": "natgateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.subnet1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:248217947790:route-table/rtb-0d47583820d488906",
            "id": "rtb-0d47583820d488906",
            "owner_id": "248217947790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0916acbd56102e010",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Subnet-RT"
            },
            "tags_all": {
              "Name": "Private-Subnet-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-030743534b07df2e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgateway",
            "aws_subnet.subnet1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:248217947790:route-table/rtb-0ed7b71c224623c2f",
            "id": "rtb-0ed7b71c224623c2f",
            "owner_id": "248217947790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac68caf64e8453b3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Subnet-RT"
            },
            "tags_all": {
              "Name": "Public-Subnet-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-030743534b07df2e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0045d0a564a2cebd8",
            "route_table_id": "rtb-0ed7b71c224623c2f",
            "subnet_id": "subnet-0f46cb4a701c3a33b"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.subnet1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee2dca9d705ed1bb",
            "route_table_id": "rtb-0d47583820d488906",
            "subnet_id": "subnet-0c5ed7d548a119762"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgateway",
            "aws_route_table.Private-Subnet-RT",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:248217947790:security-group/sg-0485e54228d556156",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0485e54228d556156",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "248217947790",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-030743534b07df2e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:248217947790:subnet/subnet-0f46cb4a701c3a33b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46cb4a701c3a33b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-030743534b07df2e7"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:248217947790:subnet/subnet-0c5ed7d548a119762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5ed7d548a119762",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-030743534b07df2e7"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:248217947790:vpc/vpc-030743534b07df2e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2465eb44c31b184",
            "default_route_table_id": "rtb-07705a8db849dc93b",
            "default_security_group_id": "sg-01c0e44bf9b018b10",
            "dhcp_options_id": "dopt-0348891fcac98d032",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-030743534b07df2e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07705a8db849dc93b",
            "owner_id": "248217947790",
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            }
          }
        }
      ]
    }
  ]
}